2003-05-16  Carl Worth  <cworth@isi.edu>

	* src/xrint.h: Added ppm filed (pixels per meter) to both
	XrSurface and XrGState.

	* src/xrgstate.c (_XrGStateSetTargetSurface): Fixup CTM according
	to change in surface->ppm.
	(_XrGStateDefaultMatrix): Default matrix is no longer an identity
	matrix, but rather a matrix that provides some relates user space
	units to real-world dimensions in a meaningful way, (default 3780
	user space units per meter). This conversion is not exact, but is
	rather as close as possible while also guaranteeing that one user
	space unit maps to an integer number of device pixels.

2003-05-15  Carl Worth  <cworth@isi.edu>

	* src/xr.c (XrSetTargetDrawable): Moved implementation up from
	_XrGStateSetTargetDrawable, (eg. all convenience functions should
	be taken care of at the xr.c level ratehr than xrgstate.c)

	* src/Xr.h: Added convenience function XrSetTargetImage

2003-05-14  Carl Worth  <cworth@isi.edu>

	* src/xrfont.c (_XrFontResolveXftFont): Fixed fonts to pull
	pixelsize out of the transformation matrix. Fonts are now properly
	hinted regardless of scaling.

	* src/Xr.h: Three new functions for manipulating surfaces:
	XrSurfaceSetMatrix, XrSurfaceGetMatrix, XrSurfaceSetFilter.

	* src/Xr.h: Removed broken XrShowImage* functions. Changed
	XrShowSurface to not require X/Y but instead depend on the CTM for
	translation, (or the surface transformation matrix). I'd like to
	get rid of width/height as well but it turns out an XrSurface is
	not aware of its dimensions.

	* src/Xr.h: Added convenience function for building rectangular
	paths: XrRectangle.

	* src/Xr.h: Added functions for performing transformations with
	the CTM and its inverse: XrTransformPoint, XrTransformDistance,
	XrInverseTransformPoint, XrInverseTransformDistance.

	* src/Xr.h: XrConcatMatrix and XrSetMatrix now accept a pointer to
	an XrMatrix rather than 6 doubles.

	* src/Xr.h: Now exporting opaque XrMatrix object with several