@@ -1,3 +1,13 @@
+2003-05-28  Carl Worth  <cworth@isi.edu>
+
+	* src/xrmatrix.c (XrMatrixMultiply): Eliminated
+	_XrMatrixMultiplyIntoRight and _XrMatrixMultiplyIntoLeft.
+
+	* src/xrgstate.c (_XrGStateClipAndCompositeTrapezoids): Fixed
+	missing translation of clip surface.
+
+	* src/Xr.h: Added XrSurfacePutImage
+
 2003-05-16  Carl Worth  <cworth@isi.edu>
 
 	* src/xrint.h: Added ppm filed (pixels per meter) to both
